feat: seed 165 standard training goals
